Updating frontpage stats

--- a/index.html
+++ b/index.html
@@ -478,8 +478,8 @@
 <!--
 var s_pageName="Home > Maps > ";
 var s_channel="WBG Mapping for Results EXT";
-var s_hier1 = "WBG,WBG Mapping for Results EXT";
-var s_prop1 = "";
+var s_hier1 = "WBG,WBG Mapping for Results EXT#<Page:0x2aaad24c64e8>";
+var s_prop1 = " - The World Bank - Mapping for Results";
 var s_prop6 = ""; / Region /
 var s_prop7 = "World"; / Country /
 var s_prop2 = "Not Available"; /* Author /
@@ -508,9 +508,10 @@ s_pageName = sTitle;
 s_prop1 = sTitle;
 s_hier1 += ", " + sTitle;
 
-var s_account="wbnispextgeomfr";
+var s_account="wbnispextgeomfr,wbglobalext";
 //-->
 </script>
 <script language="JavaScript" src="http://siteresources.worldbank.org/scripts/s_code_remote.js"></script>
 <!-- End SiteCatalyst code version: G.6. -->
+
 </body></html>
