--- a/eap/china/embed.html
+++ b/eap/china/embed.html
@@ -31,7 +31,7 @@
 <script src="http://maps.worldbank.org/javascripts/visualize.min.js?1279556727" type="text/javascript"></script>
 
 
-<script src="/map.js" type="text/javascript"></script>
+<script src="/script/map.js" type="text/javascript"></script>
 
 
   <style type="text/css" media="screen">
@@ -42,7 +42,7 @@
 </head>
 <body class=" region-left region-right region-far-right region-content-top">
   
-<div style="height: 200px; width: 200px" id="wb_map_wrapper"><div id="wb_map" class="" style="height: 100%"></div></div>
+<div id="map_embed_container" style="height: 600px; width: 800px" id="wb_map_wrapper"><div id="wb_map" class="" style="height: 100%"></div></div>
 <script type="text/javascript" charset="utf-8">
 
 
@@ -119,8 +119,8 @@
 ,{id: 'P092618',project_name: 'China-Second Liaoning Medium Cities Infrastructure Project',totalamt: 173.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Jun-2007',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":42},{"Name":"Water, sanitation and flood protection","Percent":34},{"Name":"Water, sanitation and flood protection","Percent":17},{"Name":"Water, sanitation and flood protection","Percent":6},{"Name":"Public Administration, Law, and Justice","Percent":1}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
 ,{id: 'P090336',project_name: 'GEF-Ningbo Water and Environment Project',totalamt: 5.0,grantamt: 5.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Jun-2006',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":100}],prodlinetext: 'Global Environment Project',sector_code: 'WX'}
 ,{id: 'P081348',project_name: 'HENAN TOWNS WATER SUPPLY AND SANITATION PROJECT',totalamt: 150.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Jun-2006',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":77},{"Name":"Water, sanitation and flood protection","Percent":9},{"Name":"Water, sanitation and flood protection","Percent":9},{"Name":"Public Administration, Law, and Justice","Percent":5}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
-,{id: 'P075728',project_name: 'Guangdong Pearl River Delta Urban Environment Project',totalamt: 128.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Jun-2004',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":88},{"Name":"Water, sanitation and flood protection","Percent":7},{"Name":"Public Administration, Law, and Justice","Percent":5}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
 ,{id: 'P072721',project_name: 'Heat Reform and Building Energy Efficiency Project',totalamt: 18.0,grantamt: 18.0,mjsector1: 'Industry and trade',boardapprovaldate: 'Mar-2005',majorsector_percent: [{"Name":"Industry and trade","Percent":40},{"Name":"Energy and mining","Percent":32},{"Name":"Public Administration, Law, and Justice","Percent":17},{"Name":"Public Administration, Law, and Justice","Percent":11}],prodlinetext: 'Global Environment Project',sector_code: 'YX'}
+,{id: 'P075728',project_name: 'Guangdong Pearl River Delta Urban Environment Project',totalamt: 128.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Jun-2004',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":88},{"Name":"Water, sanitation and flood protection","Percent":7},{"Name":"Public Administration, Law, and Justice","Percent":5}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
 ,{id: 'P083322',project_name: 'Sichuan Urban Development Project',totalamt: 180.0,grantamt: 0.0,mjsector1: 'Transportation',boardapprovaldate: 'Sep-2006',majorsector_percent: [{"Name":"Transportation","Percent":67},{"Name":"Water, sanitation and flood protection","Percent":14},{"Name":"Water, sanitation and flood protection","Percent":13},{"Name":"Agriculture, fishing, and forestry","Percent":4},{"Name":"Health and other social services","Percent":2}],prodlinetext: 'IBRD/IDA',sector_code: 'TX'}
 ,{id: 'P075730',project_name: 'Hunan Urban Development Project',totalamt: 172.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Sep-2004',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":45},{"Name":"Water, sanitation and flood protection","Percent":27},{"Name":"Transportation","Percent":20},{"Name":"Energy and mining","Percent":5},{"Name":"Health and other social services","Percent":3}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
 ,{id: 'P112626',project_name: 'Liuzhou Environment Management Project Phase II',totalamt: 150.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Mar-2011',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":96},{"Name":"Water, sanitation and flood protection","Percent":3},{"Name":"Public Administration, Law, and Justice","Percent":1}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
@@ -163,13 +163,16 @@
 ,{id: 'P082993',project_name: 'PCB Management and Disposal Demonstration Project',totalamt: 18.34,grantamt: 18.34,mjsector1: 'Industry and trade',boardapprovaldate: 'Dec-2005',majorsector_percent: [{"Name":"Industry and trade","Percent":57},{"Name":"Water, sanitation and flood protection","Percent":33},{"Name":"Public Administration, Law, and Justice","Percent":6},{"Name":"Public Administration, Law, and Justice","Percent":4}],prodlinetext: 'Global Environment Project',sector_code: 'YX'}
 ,{id: 'P087153',project_name: 'CN-PCF Xiaogushan Hydropower  Project',totalamt: 10.0,grantamt: 10.0,mjsector1: 'Energy and mining',boardapprovaldate: 'Jun-2005',majorsector_percent: [{"Name":"Energy and mining","Percent":100}],prodlinetext: 'Carbon Offset',sector_code: 'LX'}];
       
-  wb.init(359,  "China", "East Asia & the Pacific", {projects_count: '113', locations_count: '1,759', projects: projects, locations_layer: 0, indicators: ['Poverty','Population'], layers: null}, true);
+  wb.init("359",  "China", "East Asia & the Pacific", {projects_count: '113', locations_count: '1,759', projects: projects, locations_layer: 0, indicators: ['Poverty','Population'], layers: null, page_type: "country", thematic_area: "m4r"}, true);
   
   
 </script>
 
 <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
-
+<script type="text/javascript" charset="utf-8">
+  jq("#map_embed_container").width(getQuerystring("width", 200))
+  jq("#map_embed_container").height(getQuerystring("height", 200))
+</script>
   
 <script type="text/javascript">
   var _gaq = _gaq || [];
@@ -188,7 +191,7 @@
 <!--
 var s_pageName="Home > Maps > China, East Asia & the Pacific > ";
 var s_channel="WBG Mapping for Results EXT";
-var s_hier1 = "WBG,WBG Mapping for Results EXT#<Page:0x2aaab6f0adf8>,#<Page:0x2aaab6b37d70>,#<Page:0x2aaab6eaba38>";
+var s_hier1 = "WBG,WBG Mapping for Results EXT,World,East Asia & the Pacific,China";
 var s_prop1 = "";
 var s_prop6 = "East Asia & the Pacific"; / Region /
 var s_prop7 = "China"; / Country /
@@ -223,5 +226,6 @@ var s_account="wbnispextgeomfr,wbglobalext";
 </script>
 <script language="JavaScript" src="http://siteresources.worldbank.org/scripts/s_code_remote.js"></script>
 <!-- End SiteCatalyst code version: G.6. -->
+
 
 </body></html>
