--- a/eap/china/index.html
+++ b/eap/china/index.html
@@ -596,8 +596,8 @@
 ,{id: 'P092618',project_name: 'China-Second Liaoning Medium Cities Infrastructure Project',totalamt: 173.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Jun-2007',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":42},{"Name":"Water, sanitation and flood protection","Percent":34},{"Name":"Water, sanitation and flood protection","Percent":17},{"Name":"Water, sanitation and flood protection","Percent":6},{"Name":"Public Administration, Law, and Justice","Percent":1}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
 ,{id: 'P090336',project_name: 'GEF-Ningbo Water and Environment Project',totalamt: 5.0,grantamt: 5.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Jun-2006',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":100}],prodlinetext: 'Global Environment Project',sector_code: 'WX'}
 ,{id: 'P081348',project_name: 'HENAN TOWNS WATER SUPPLY AND SANITATION PROJECT',totalamt: 150.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Jun-2006',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":77},{"Name":"Water, sanitation and flood protection","Percent":9},{"Name":"Water, sanitation and flood protection","Percent":9},{"Name":"Public Administration, Law, and Justice","Percent":5}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
-,{id: 'P075728',project_name: 'Guangdong Pearl River Delta Urban Environment Project',totalamt: 128.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Jun-2004',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":88},{"Name":"Water, sanitation and flood protection","Percent":7},{"Name":"Public Administration, Law, and Justice","Percent":5}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
 ,{id: 'P072721',project_name: 'Heat Reform and Building Energy Efficiency Project',totalamt: 18.0,grantamt: 18.0,mjsector1: 'Industry and trade',boardapprovaldate: 'Mar-2005',majorsector_percent: [{"Name":"Industry and trade","Percent":40},{"Name":"Energy and mining","Percent":32},{"Name":"Public Administration, Law, and Justice","Percent":17},{"Name":"Public Administration, Law, and Justice","Percent":11}],prodlinetext: 'Global Environment Project',sector_code: 'YX'}
+,{id: 'P075728',project_name: 'Guangdong Pearl River Delta Urban Environment Project',totalamt: 128.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Jun-2004',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":88},{"Name":"Water, sanitation and flood protection","Percent":7},{"Name":"Public Administration, Law, and Justice","Percent":5}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
 ,{id: 'P083322',project_name: 'Sichuan Urban Development Project',totalamt: 180.0,grantamt: 0.0,mjsector1: 'Transportation',boardapprovaldate: 'Sep-2006',majorsector_percent: [{"Name":"Transportation","Percent":67},{"Name":"Water, sanitation and flood protection","Percent":14},{"Name":"Water, sanitation and flood protection","Percent":13},{"Name":"Agriculture, fishing, and forestry","Percent":4},{"Name":"Health and other social services","Percent":2}],prodlinetext: 'IBRD/IDA',sector_code: 'TX'}
 ,{id: 'P075730',project_name: 'Hunan Urban Development Project',totalamt: 172.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Sep-2004',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":45},{"Name":"Water, sanitation and flood protection","Percent":27},{"Name":"Transportation","Percent":20},{"Name":"Energy and mining","Percent":5},{"Name":"Health and other social services","Percent":3}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
 ,{id: 'P112626',project_name: 'Liuzhou Environment Management Project Phase II',totalamt: 150.0,grantamt: 0.0,mjsector1: 'Water, sanitation and flood protection',boardapprovaldate: 'Mar-2011',majorsector_percent: [{"Name":"Water, sanitation and flood protection","Percent":96},{"Name":"Water, sanitation and flood protection","Percent":3},{"Name":"Public Administration, Law, and Justice","Percent":1}],prodlinetext: 'IBRD/IDA',sector_code: 'WX'}
@@ -666,7 +666,7 @@
 <!--
 var s_pageName="Home > Maps > China, East Asia & the Pacific > ";
 var s_channel="WBG Mapping for Results EXT";
-var s_hier1 = "WBG,WBG Mapping for Results EXT#<Page:0x2aaab3f25e58>,#<Page:0x2aaab428b598>,#<Page:0x2aaab43f1338>";
+var s_hier1 = "WBG,WBG Mapping for Results EXT,World,East Asia & the Pacific,China";
 var s_prop1 = "China, East Asia & the Pacific > The World Bank - Mapping for Results";
 var s_prop6 = "East Asia & the Pacific"; / Region /
 var s_prop7 = "China"; / Country /
@@ -701,6 +701,7 @@ var s_account="wbnispextgeomfr,wbglobalext";
 </script>
 <script language="JavaScript" src="http://siteresources.worldbank.org/scripts/s_code_remote.js"></script>
 <!-- End SiteCatalyst code version: G.6. -->
+
 
 </body>
 </html>
