User update of /extractives/about_extractives

--- a/extractives/about_extractives.html
+++ b/extractives/about_extractives.html
@@ -188,6 +188,7 @@
 <p>The <a href=" http://www.fao.org/geonetwork/srv/en/metadata.show?id=12691">Global Administrative Unit Layers</a> is an initiative implemented by FAO within the <a href=" http://www.foodsecinfoaction.org/News/news_06_06.htm">EC-FAO Food Security Programme</a> funded by the European Commission. The GAUL aims at compiling and disseminating the most reliable spatial information on administrative units for all the countries in the world, providing a contribution to the standardization of the spatial dataset representing administrative units. The GAUL sub-national boundaries for Ghana were last updated in 2005, and do not include several changes made since then to the number and shape of second-order administrative units in the country.
 </p>
 <br />
+stuff
 </div>
 
     </div>
