Updating Kenya demo

--- a/afr/kenya.html
+++ b/afr/kenya.html
@@ -123,7 +123,7 @@
         	<div id="map-content-header">
             <div class="worldmenuholder">
             	<a class="mag-glass" href="#" id="map_mag"></a>
-                            <ul class="worldmenu dropmenu">
+                            <ul id="kenya_menu" class="worldmenu dropmenu">
                 <li class="first"><a href="#" onclick="return false;" style="0">KENYA</span></a>
                 
                 <div class="menu-world-options" style="">
