--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <div id="content-wrapper">
         <div id="map-content-header">
       <div class="worldmenuholder">
-                    <ul class="worldmenu dropmenu">
+                    <ul id="world_menu" class="worldmenu dropmenu">
                 <li class="first"><a href="#" onclick="return false;" style="0">Explore Countries</span></a>
                 
                 <div class="menu-world-options" style="">
@@ -281,7 +281,7 @@
   </div>
   <div id="chart-left-stat">
     <h1 id="sector_funding_total"></h1>
-    <h2 id="sector_funding_description"></h2>
+    <h2 id="sector_funding_description" style="display:none"></h2>
   </div>
   <div id="chart-left-pie-chart"></div>
 </div>
@@ -319,7 +319,6 @@
 
 
     </div>
-    
             <br class="clear" />
         <div id="footnote">Active financed activities as of November 11, 2011.</div>
         <div id="network-breadcrumb"><div class="limiter clear-block">
