--- a/eap/vietnam.html
+++ b/eap/vietnam.html
@@ -595,6 +595,35 @@
 
   <div id="rightDesc">
       
+<h3>VIETNAM STORIES</h3>
+<table class="Table100Per" cellpadding="0" cellspacing="0">
+            <tbody><tr>
+            <td colspan="3">
+
+                <link rel="stylesheet" href="/storymaps/images/dec2.css" type="text/css"><link rel="stylesheet" href="/storymaps/images/print.css" type="text/css" media="print"><link rel="STYLESHEET" href="/storymaps/images/dec_home_slide2.css" type="text/css"><script src="/storymaps/images/dec.js" type="text/javascript">//<!--//--></script> &nbsp;<script language="JavaScript" type="text/javascript" src="/storymaps/images/slide.js"><!--//--></script>
+
+<!-- Start Feature Content --><div id="maincontent"><div class="featcol"><div id="slidesWrapper_home"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td>
+
+<!-- Start Main Feature -->
+<!-- Start Slide 1 --><div style="display: none;" id="slide1" class="slides_home" name="slides_home"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a onclick="trackCustomLink(this, 'More')" href="http://wb-storymaps.blueraster.com/stories.htm#project=P044803&activity=1"><img title="Click Image for More" alt="Click Image" src="/storymaps/images/Vietnam_prim_school1.png" border="0"></a></td></tr></tbody></table></div><!-- End Slide 1 -->
+
+<!-- Start Slide 2 --><div style="display: none;" id="slide2" class="slides_home" name="slides_home"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a onclick="trackCustomLink(this, 'more')" href="http://wb-storymaps.blueraster.com/stories.htm#project=P082295&activity=1"><img title="Click Image for More" alt="More" src="/storymaps/images/Vietnam_prim_canal2.png" border="0"></a></td></tr></tbody></table></div><!-- End Slide 2 -->
+
+<!-- Start Slide 3 --><div style="display: none;" id="slide3" class="slides_home" name="slides_home"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a onclick="trackCustomLink(this, 'More')" href="http://wb-storymaps.blueraster.com/stories.htm#project=P073305&activity=1"><img title="Click Image for More" alt="more" src="/storymaps/images/Vietnam_donor_cntre4.png" border="0"></a></td></tr></tbody></table></div><!-- End Slide 3 -->
+
+<!-- Start Slide 4 --><div style="display: block;" id="slide4" class="slides_home" name="slides_home"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a onclick="trackCustomLink(this, 'More')" href="http://wb-storymaps.blueraster.com/stories.htm#project=P052037&activity=1"><img title="Click Image for More" alt="More" src="/storymaps/images/Vietnam_flooding5.png" border="0"></a></td></tr></tbody></table></div><!-- End Slide 4 -->
+
+<!-- Start Slide 5 --><div style="display: none;" id="slide5" class="slides_home" name="slides_home"><table border="0" cellpadding="0" cellspacing="0"><tbody><tr><td><a onclick="trackCustomLink(this, 'more')" href="http://wb-storymaps.blueraster.com/stories.htm#project=P075407&activity=1"><img title="Click Image for More" alt="more" src="/storymaps/images/Vietnam_Trans7.png" border="0"></a></td></tr></tbody></table></div><!-- End Slide 5 -->
+
+
+
+<!-- End Main Feature --></td></tr></tbody></table>
+
+<div id="arrows_home"><a href="#" onclick="slidesPause(); showSlide('1'); return false"><img src="/storymaps/images/storybullet-new.gif" id="sq1" name="sq_home" border="0"></a> <a href="#" onclick="slidesPause(); showSlide('2'); return false"><img src="/storymaps/images/storybullet-new.gif" id="sq2" name="sq_home" border="0"></a> <a href="#" onclick="slidesPause(); showSlide('3'); return false"><img src="/storymaps/images/storybullet-new.gif" id="sq3" name="sq_home" border="0"></a> <a href="#" onclick="slidesPause(); showSlide('4'); return false"><img src="/storymaps/images/storybullet-new-on.gif" id="sq4" name="sq_home" border="0"></a> <a href="#" onclick="slidesPause(); showSlide('5'); return false"><img src="/storymaps/images/storybullet-new.gif" id="sq5" name="sq_home" border="0"></a> </div></div></div>
+ </div>
+
+</td></tr></tbody></table>
+
       <h3>VIETNAM LINKS</h3>
       <ul class="disc">
         
