--- a/afr/rwanda.html
+++ b/afr/rwanda.html
@@ -604,7 +604,7 @@
       <a class="txtRed" href="#">See All Results for Rwanda &raquo;</a>
     </p> -->
     <h3>RWANDA</h3>
-      <h3>World Bank Local</h3>
+      <h3>Geo Results</h3>
 <iframe src="http://maps.worldbank.org/storymaps/Rwanda/Rwanda.html" width="290" height="220" scrolling="no"></iframe>
 
 Rwanda has achieved impressive development gains since the 1994 genocide and civil war. It is now consolidating gains in social development, accelerating growth, and ensuring that they are broadly shared to mitigate risks to eroding its hard-won political and social stability. World Bank assistance to Rwanda aims at achieving greater synergies and catalyzing higher volumes of private resources to support Rwanda’s development. The top three sectors funded by the World Bank are energy, agriculture, and private sector development. 
