--- a/sa/nepal.html
+++ b/sa/nepal.html
@@ -620,7 +620,7 @@
       <a class="txtRed" href="#">See All Results for Nepal &raquo;</a>
     </p> -->
     <h3>NEPAL</h3>
-      <h3>World Bank Local</h3>
+      <h3>Geo Results</h3>
 <iframe src="http://maps.worldbank.org/storymaps/Nepal/Nepal.html" width="290" height="220" scrolling="no"></iframe>
 
 Nepal is a country at a crossroads, emerging from a decade-long conflict that formally ended in November 2006 and now transitioning from conflict to peace and from a monarchy to a republic. Growth rebounded to 4.7 percent in fiscal year 2008 but the next few years are critical if Nepal is to build on this success, managing its transition while confronting long-standing development challenges at a time of global economic downturn.
