--- a/storymaps/Rwanda/Rwanda.html
+++ b/storymaps/Rwanda/Rwanda.html
@@ -1,3 +1,4 @@
+<base target="_blank" />
 
 <!-- saved from url=(0086)file:///C:/Users/wb416343/Desktop/M4R%20Carousel_Countries/HTML&%20Folders/Rwanda.html -->
 <html><head>
