--- a/afr/ethiopia/index.html
+++ b/afr/ethiopia/index.html
@@ -616,7 +616,7 @@
       <a class="txtRed" href="#">See All Results for Ethiopia &raquo;</a>
     </p> -->
     <h3>ETHIOPIA</h3>
-      <h3>Results Snapshots</h3>
+      <h3>Geo Results</h3>
 <iframe src="http://maps.worldbank.org/storymaps/Ethiopia/Ethiopia.html" width="290" height="220" scrolling="no"></iframe>
 
 One of the world’s oldest civilizations, Ethiopia is also one of the world’s poorest countries. The International Development Association is Ethiopia’s largest provider of official development assistance: it has committed over US$7 billion to more than 60 operations since 1991, most notably for the protection of basic services, productive safety nets, and roads. The Bank has worked to promote economic growth and address systemic poverty challenges across many sectors. 
