--- a/eap/vietnam/index.html
+++ b/eap/vietnam/index.html
@@ -604,7 +604,7 @@
       <a class="txtRed" href="#">See All Results for Vietnam &raquo;</a>
     </p> -->
     <h3>VIETNAM</h3>
-      <h3>World Bank Local</h3>
+      <h3>Geo Results</h3>
 <iframe src="http://maps.worldbank.org/storymaps/Vietnam/Vietnam.html" width="290" height="220" scrolling="no"></iframe>
 
 Vietnam is one of the fastest-growing economies in the world. It is going through a far-reaching transformation from an inward looking planned economy to one that is globalized and market based. It has the potential to be one of the great success stories in development. Real income has grown 7.3 percent per year over the last 10 years. The World Bank has helped Vietnam fight poverty through finance for agriculture, infrastructure, health programs, and schools, among other things.
