--- a/lac/bolivia/index.html
+++ b/lac/bolivia/index.html
@@ -624,7 +624,7 @@
       <a class="txtRed" href="#">See All Results for Bolivia &raquo;</a>
     </p> -->
     <h3>BOLIVIA</h3>
-      <h3>World Bank Local</h3>
+      <h3>Geo Results</h3>
 <iframe src="http://maps.worldbank.org/storymaps/Bolivia/Bolivia.html" width="290" height="220" scrolling="no"></iframe>
 
 Bolivia is a landlocked country located between the Andes and the Amazon, with a very diverse population in which various ethnic groups coexist. Despite recent improvements, it is still one of the poorest and most unequal countries in the Americas where rural and indigenous populations are particularly vulnerable. The World Bank in Bolivia has made a point of working with government, communities, and other partners to ensure that support benefits Bolivia's overall development. Some of the Bank’s most successful initiatives in Bolivia include the key health and education sectors a a way to improve inequalities; and rural development as a way to improve accessibility to markets for poor rural producers.
