--- a/storymaps/Georgia/Georgia.html
+++ b/storymaps/Georgia/Georgia.html
@@ -1,3 +1,4 @@
+<base target="_blank" />
 
 <!-- saved from url=(0087)file:///C:/Users/wb416343/Desktop/M4R%20Carousel_Countries/HTML&%20Folders/Georgia.html -->
 <html><head></head><body>
