Caching additional JSDF pages

--- a/jsdf.html
+++ b/jsdf.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" lang="en"><head>
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <title>JSDF Financed Activities: Closed Grants, FY01-FY11, World >  - The World Bank - Mapping for Results</title>
+    <title>JSDF, World >  - The World Bank - Mapping for Results</title>
     <link rel="shortcut icon" href="http://maps.worldbank.org/favicon.ico" type="image/x-icon" />
-    <meta name="description" content="JSDF Financed Activities: Closed Grants, FY01-FY11, World >  - The World Bank - Mapping for Results">
-    <meta name="keywords" content="JSDF Financed Activities: Closed Grants, FY01-FY11,World,health,poverty,millenium development goals,indicators,development,humanitarian">
+    <meta name="description" content="JSDF, World >  - The World Bank - Mapping for Results">
+    <meta name="keywords" content="JSDF,World,health,poverty,millenium development goals,indicators,development,humanitarian">
     <meta name="author" content="World Bank">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script type="text/javascript" charset="utf-8">
@@ -83,7 +83,7 @@
     <div id="container">
           <div id="banner">
         <div id="local" class=" collapsed" content_id="collapsible-banner">
-          <div title="" class="site-name"><a class="active" href="/">Mapping for Results</a> - <a href="/jsdf-financed-activities">JSDF Financed Activities: Closed Grants, FY01-FY11</a></div>
+          <div title="" class="site-name"><a class="active" href="/">Mapping for Results</a> - <a href="/jsdf">JSDF</a></div>
           <div  >
             <div title="More information about Mapping for Results" class="banner-open-image"></div>
           </div>          
@@ -117,8 +117,8 @@
           <li class="share"><a title="share" href="#" id="share_options"><span></span>SHARE</a>
               <ul class="dropmenu_options">
                 <li><a title="embed" href="#" id="embed_map"><span></span>Embed Map</a></li>
-                <li><a href="http://twitter.com/home?status=JSDF+Financed+Activities:+Closed+Grants,+FY01-FY11,+World+>++-+The+World+Bank+-+Mapping+for+Results+http://maps.worldbank.org/jsdf-financed-activities" target="_new" id="twitter_link" onclick="return twt_click()">Twitter</a></li>
-                <li><a rel="nofollow" href="http://www.facebook.com/share.php?u=http://maps.worldbank.org/jsdf-financed-activities" class="fb_share_button" onclick="return fbs_click()" target="_blank" style="text-decoration:none;">Facebook</a> </li>
+                <li><a href="http://twitter.com/home?status=JSDF,+World+>++-+The+World+Bank+-+Mapping+for+Results+http://maps.worldbank.org/jsdf" target="_new" id="twitter_link" onclick="return twt_click()">Twitter</a></li>
+                <li><a rel="nofollow" href="http://www.facebook.com/share.php?u=http://maps.worldbank.org/jsdf" class="fb_share_button" onclick="return fbs_click()" target="_blank" style="text-decoration:none;">Facebook</a> </li>
                 <!-- <li><a href="#" id="">Embed the Map</a></li> -->
               </ul>
           </li>
@@ -141,7 +141,7 @@
     <div id="map-content-header">
       <div class="worldmenuholder">	
                     <ul id="project_menu" class="worldmenu dropmenu">
-                <li class="first"><a href="#" onclick="return false;" style="padding: 5px 15px 11px 30px;">JSDF FINANCED ACTIVITIES: CLOSED GRANTS, FY01-FY11</span></a>
+                <li class="first"><a href="#" onclick="return false;" style="0">JSDF</span></a>
                 
                 <div class="menu-world-options" style="">
                   <ul class="menu-regions dropmenu_options" id="navmenu" style="">
@@ -512,7 +512,7 @@
               </ul>
 
 
-      <div id="map-summary-container" style="float:left; display: none">
+      <div id="map-summary-container" style="float:left">
         <h1 id="map-summary" style="display:none" class="loaded txtRed txtGeorgia">
       
         	<span id="project_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr" id="active_projects_header">financed activities working in</span> <span id="activity_count">&nbsp;&nbsp;&nbsp;&nbsp;</span> <span class="smallHdr" id="mapped_locations_header">mapped locations</span>
@@ -539,7 +539,7 @@ var wb = null;
 function onload() {
   wb = new F1.WorldBank();
   
-  wb.init("2367",  "JSDF Financed Activities: Closed Grants, FY01-FY11",  "World", {title: 'JSDF Financed Activities: Closed Grants, FY01-FY11',locations_count: '0', thematic_area: "m4r"}, false);
+  wb.init("2551",  "JSDF",  "World", {title: 'JSDF',locations_count: '746', thematic_area: "m4r"}, false);
 
   
 
@@ -562,7 +562,7 @@ function onload() {
         <div id="network-breadcrumb"><div class="limiter clear-block">
     	<span class="breadcrumb-link"><a class="breadcrumb-link-home">You are here</a></span><span class="breadcrumb-link breadcrumb-first"><a href="http://www.worldbank.org/projects">Projects &amp; Operations</a></span>
     	<span class="breadcrumb-link breadcrumb-first"><a href="http://maps.worldbank.org">Map</a></span>
-        <a class="breadcrumb-link" href="/" title='World Bank: World'>World</a><a class="breadcrumb-link breadcrumb-last" href="/jsdf-financed-activities">JSDF Financed Activities: Closed Grants, FY01-FY11</a>   
+        <a class="breadcrumb-link" href="/" title='World Bank: World'>World</a><a class="breadcrumb-link breadcrumb-last" href="/jsdf">JSDF</a>   
         </div>
         </div>
         <div id="network-footer">
@@ -604,12 +604,12 @@ function onload() {
 <script language="JavaScript" src="http://siteresources.worldbank.org/SITEMGR/Resources/WebStatsUtil.js"></script>
 <script language="JavaScript">
 <!--
-var s_pageName="Home > Maps > JSDF Financed Activities: Closed Grants, FY01-FY11, World > ";
+var s_pageName="Home > Maps > JSDF, World > ";
 var s_channel="WBG Mapping for Results EXT";
-var s_hier1 = "WBG,WBG Mapping for Results EXT,World,JSDF Financed Activities: Closed Grants, FY01-FY11";
-var s_prop1 = "JSDF Financed Activities: Closed Grants, FY01-FY11, World >  - The World Bank - Mapping for Results";
+var s_hier1 = "WBG,WBG Mapping for Results EXT,World,JSDF";
+var s_prop1 = "JSDF, World >  - The World Bank - Mapping for Results";
 var s_prop6 = "World"; / Region /
-var s_prop7 = "JSDF Financed Activities: Closed Grants, FY01-FY11"; / Country /
+var s_prop7 = "JSDF"; / Country /
 var s_prop2 = "Not Available"; /* Author /
 var s_prop3 = "Not Available"; / Date /
 var s_prop4 = "Not Available"; / Topic /
