Updated Myanmar copy text

--- a/eap/myanmar.html
+++ b/eap/myanmar.html
@@ -613,7 +613,7 @@
       <a class="txtRed" href="#">See All Results for Myanmar &raquo;</a>
     </p> -->
     <h3>MYANMAR</h3>
-      The World Bank has approved no new lending for Myanmar since 1987, and has no plans to resume its program with the Government of Myanmar. The World Bank is supporting one project, financed by the Avian and Human Influenza multi donor trust fund and implemented through FAO.
+      The World Bank has begun the process of re-engaging with the Government of Myanmar to support reforms that will benefit all of the people of Myanmar, including the poor and vulnerable. The Bank approved in November 2012 support for a National Community Driven Development Project where rural communities will be empowered to choose the investments they need most.
     <!-- <p class="desc">
       Learn more about the World Bank's overall strategy in the <a href="#" class="txtRed">MYANMAR Country Overview &raquo;</a>
     </p> -->
