Added cache geoiq assets

--- a/jsdf.html
+++ b/jsdf.html
@@ -83,7 +83,7 @@
     <div id="container">
           <div id="banner">
         <div id="local" class=" collapsed" content_id="collapsible-banner">
-          <div title="" class="site-name"><a class="active" href="/">Mapping for Results</a> - <a href="/jsdf">JSDF</a></div>
+          <div title="" class="site-name"><a class="active" href="/">Mapping for Results</a> - <a href="/jsdf">JSDF Closed Grants, FY01-FY11</a></div>
           <div  >
             <div title="More information about Mapping for Results" class="banner-open-image"></div>
           </div>          
@@ -141,7 +141,7 @@
     <div id="map-content-header">
       <div class="worldmenuholder">	
                     <ul id="project_menu" class="worldmenu dropmenu">
-                <li class="first"><a href="#" onclick="return false;" style="0">JSDF</span></a>
+                <li class="first"><a href="#" onclick="return false;" style="0">JSDF Closed Grants, FY01-FY11</span></a>
                 
                 <div class="menu-world-options" style="">
                   <ul class="menu-regions dropmenu_options" id="navmenu" style="">
@@ -539,7 +539,7 @@ var wb = null;
 function onload() {
   wb = new F1.WorldBank();
   
-  wb.init("2551",  "JSDF",  "World", {title: 'JSDF',locations_count: '746', thematic_area: "m4r"}, false);
+  wb.init("2551",  "JSDF Closed Grants, FY01-FY11",  "World", {title: 'JSDF',locations_count: '846', thematic_area: "m4r"}, false);
 
   
 
