--- a/afr/kenya.html
+++ b/afr/kenya.html
@@ -18,7 +18,7 @@
     <script type="text/javascript" src="/js/tipsy.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/wb_behaviors.js"></script>
 <script type="text/javascript" charset="utf-8" src="/js/tmpl.js"></script>
-<script type="text/javascript" charset="utf-8" src="http://maps.worldbank.org/javascripts/f1.api.js"></script>
+<script type="text/javascript" charset="utf-8" src="/javascripts/f1.api.js"></script>
 <script src="/script/map.js" type="text/javascript"></script>
 
     <script type="text/javascript" charset="utf-8">
