--- a/sa/nepal/p99999.html
+++ b/sa/nepal/p99999.html
@@ -117,8 +117,8 @@
           <li class="share"><a title="share" href="#" id="share_options"><span></span>SHARE</a>
               <ul class="dropmenu_options">
                 <li><a title="embed" href="#" id="embed_map"><span></span>Embed Map</a></li>
-                <li><a href="http://twitter.com/home?status=ageitest,+Nepal+>++-+The+World+Bank+-+Mapping+for+Results+http://maps.worldbank.org/sa/nepal/p99999" target="_new" id="twitter_link" onclick="return twt_click()">Twitter</a></li>
-                <li><a rel="nofollow" href="http://www.facebook.com/share.php?u=http://maps.worldbank.org/sa/nepal/p99999" class="fb_share_button" onclick="return fbs_click()" target="_blank" style="text-decoration:none;">Facebook</a> </li>
+                <li><a href="http://twitter.com/home?status=ageitest,+Nepal+>++-+The+World+Bank+-+Mapping+for+Results+http://maps.worldbank.org/sa/nepal/P99999" target="_new" id="twitter_link" onclick="return twt_click()">Twitter</a></li>
+                <li><a rel="nofollow" href="http://www.facebook.com/share.php?u=http://maps.worldbank.org/sa/nepal/P99999" class="fb_share_button" onclick="return fbs_click()" target="_blank" style="text-decoration:none;">Facebook</a> </li>
                 <!-- <li><a href="#" id="">Embed the Map</a></li> -->
               </ul>
           </li>
@@ -531,10 +531,8 @@ function onload() {
 
   
 
-    jq.ready( function() {
-          jq("#map_embed_container").width(parseInt(getQuerystring("width", 200), 10));
-          jq("#map_embed_container").height(parseInt(getQuerystring("height", 200), 10));
-    } );
+  jq("#map_embed_container").width(parseInt(getQuerystring("width", 200), 10))
+  jq("#map_embed_container").height(parseInt(getQuerystring("height", 200), 10))
 
   }
 </script>
