Hide kenya iframe

--- a/afr/kenya.html
+++ b/afr/kenya.html
@@ -621,7 +621,7 @@
     </p> -->
     <h3>KENYA</h3>
       <h3>Geo Results</h3>
-<iframe src="http://maps.worldbank.org/storymaps/Kenya/Kenya.html" width="290" height="220" scrolling="no"></iframe>
+<!-- <iframe src="http://maps.worldbank.org/storymaps/Kenya/Kenya.html" width="290" height="220" scrolling="no"></iframe> -->
 
 The World Bank’s work in Kenya supports the government’s Vision 2030 development strategy, which aims to accelerate sustainable growth, reduce inequality, and manage resource scarcity. The largest share of World Bank commitments is in infrastructure (transport, energy, water and telecommunications) followed by agriculture and rural development.
     <!-- <p class="desc">
