Trying to resolve jQuery callbacks with static JSON files

--- a/afr/kenya.html
+++ b/afr/kenya.html
@@ -730,7 +730,7 @@ function onload() {
 ,{'id': 'P099628','project_name': 'BioCF Kenya Greenbelt Movement','totalamt': 2.2,'grantamt': 2.2,'mjsector1': 'Agriculture, fishing, and forestry','boardapprovaldate': 'Nov-2006','majorsector_percent': [{"Name":"Agriculture, fishing, and forestry","Percent":100}],'prodlinetext': 'Carbon Offset','sector_code': 'AX','Results Stories': '','Results Image': '','Results Blurb': '','GeoResult': '','Project Results (ISR)': ''}
 ,{'id': 'P001365','project_name': 'EXPORT DEVELOPMENT','totalamt': 49.2,'grantamt': 0.0,'mjsector1': 'Industry and trade','boardapprovaldate': 'Nov-1991','majorsector_percent': [{"Name":"Industry and trade","Percent":72},{"Name":"Public Administration, Law, and Justice","Percent":12},{"Name":"Industry and trade","Percent":8},{"Name":"Finance","Percent":4},{"Name":"Industry and trade","Percent":4}],'prodlinetext': 'IBRD/IDA','sector_code': 'YX','Results Stories': '','Results Image': '','Results Blurb': '','GeoResult': '','Project Results (ISR)': ''}];
       
-  wb.init("255",  "Kenya", "Africa", {projects_count: '41', locations_count: '349', projects: projects, locations_layer: 0, indicators: ['Poverty','Malnutrition','Infant Mortality','Maternal Health','Population Density'], layers: null, page_type: "country", thematic_area: "m4r"}, false);
+  wb.init("kenya",  "Kenya", "Africa", {projects_count: '41', locations_count: '349', projects: projects, locations_layer: 0, indicators: ['Poverty','Malnutrition','Infant Mortality','Maternal Health','Population Density'], layers: null, page_type: "country", thematic_area: "m4r"}, false);
   
 
     jq.ready( function() {
